--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,9 @@ jobs:
     docker:
     - image: golang:1.10-stretch
 
-    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+    working_directory: /go/src/github.com/hi-k-tanaka/spanner-csv-loader
     steps:
     - checkout
 
+    - run: make tools
     - run: make lint
